fix: overlapping btn with list items
This commit fixes a bug I have just discovered.

Issue:
When adding several items to either the list manager or default list, die to using positioning absolute on the button elements, the list items overlap the buttons.
For a temporary fix I have changed the position of the buttons to be top right instead of bottom right, which solves the issue for now but makes the UI a little cluttered.

Given more time I would like to refactor the UI to keep the original position of bottom right for the buttons but this quick fix solves the usability issue for now which is more important.

To compensate I've make the list manager slightly wider to give more spacing between elements.

--- a/src/style.css
+++ b/src/style.css
@@ -246,8 +246,8 @@ ul {
 .list-manager-container {
   position: relative;
   flex: 1; 
-  min-width: 100px; 
-  max-width: 250px; 
+  min-width: 150px; 
+  max-width: 300px; 
   background-color: var(--background-shade);
   border-radius: var(--border-radius);
 }
@@ -298,7 +298,7 @@ button:hover, input[type="submit"]:hover {
 .add-task-btn,
 .new-list-btn {
   position: absolute;
-  bottom: 0;
+  top: 0;
   right: 0;
 }
 
